updates enums